--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,7 +7,7 @@
 
 /*  importacoes de estilo do main  */
 
-
+@import url("./main/swiper.css");
 
 /*  importacoes de estilo do footer */
 
@@ -51,7 +51,7 @@
 
 .pagina__inteira {
 
-
+   
     color:  var(--cor-compartilhada-01);
     text-decoration: none;
 
