--- a/CSS/header/cabecalho__index.css
+++ b/CSS/header/cabecalho__index.css
@@ -58,7 +58,7 @@
 
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        gap: 40px;
 
         .cabecalho__navegacao__intens {
 
@@ -68,16 +68,17 @@
             color: var(--cor-compartilhada-01);
             text-decoration: none;
 
+
+        }
+                   
+        .cabecalho__navegacao__intens:hover {
+            
+            color: var(--cor-elementos-02);
+       
         }
 
     }
-
-    .cabecalho__navegacao__intens:hover {
     
-        color: var(--cor-elementos-02);
-
-    }
-
 }
 
 @media (min-width: 720px) {
