--- a/CSS/main/swiper.css
+++ b/CSS/main/swiper.css
@@ -1,16 +1,103 @@
+.title, .subtitle, .text {
+  
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: var(--cor-compartilhada-01);
+  margin: 40px;
+  padding: 0;
+
+}
+
 .swiper {
 
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh !important; 
+  
+  
+}
 
+.swiper-slide {
+
+  background-size: cover; 
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay; 
+  font-size: 18px;
+  color: var(--cor-compartilhada-01);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 40px 60px;
+  width: 100%;
+  height: 1px;
+  
+ 
+}
+
+.swiper-slide .title {
+
+  font-size: 41px;
+  font-weight: 300;
+
+}
+
+.swiper-slide .subtitle {
+
+  font-size: 21px;
+
+}
+
+.swiper-slide .text {
+
+  font-size: 14px;
+  max-width: 400px;
+  line-height: 1.3;
+
+}
+
+.swiper__setas {
+
+  background: var(--cor-elementos-02);
+  border-radius: 50%;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  --swiper-navigation-size: 10px;
+  --swiper-navigation-top-offset: 50%;
+  --swiper-navigation-sides-offset: 10px;
+  width: 25px !important;
+  height: 25px !important;
+
+}    
+
+@media (min-width: 720px) {
+
+  .swiper {
+
+    height: 65vh !important; 
+  
   }
+  
+  .swiper__setas {
+
+    --swiper-navigation-size: 20px;
+    width: 50px !important;
+    height: 50px !important;
+  
+  } 
+
+  .swiper-button-next, .swiper-button-prev {
+
+    --swiper-navigation-sides-offset: 30px;
+   
+  
+  }  
+
+}
 
 @media (min-width: 1100px) {
 
-    .swiper {
+  .swiper {
 
-        height: 1200px;
-    
-      }
+  height: 50vh !important; 
+
+  }
 
 }
