--- a/CSS/index.css
+++ b/CSS/index.css
@@ -8,6 +8,7 @@
 /*  importacoes de estilo do main  */
 
 @import url("./main/swiper.css");
+@import url("./main/proxima___atividade.css");
 
 /*  importacoes de estilo do footer */
 
@@ -29,6 +30,7 @@
     
     --cor-elementos-01: #252627;
     --cor-elementos-02: #3970BE;
+    --cor-elementos-03: #D3D3D3;
 
     /*  cores que serão usadas apenas no textos da pagina  */
 
