--- a/CSS/main/swiper.css
+++ b/CSS/main/swiper.css
@@ -11,7 +11,7 @@
 .swiper {
 
   width: 100%;
-  height: 100vh !important; 
+  height: 100% !important; 
   
   
 }
@@ -28,7 +28,7 @@
   box-sizing: border-box;
   padding: 40px 60px;
   width: 100%;
-  height: 1px;
+  height: 100px;
   
  
 }
