--- a/CSS/main/calendario.css
+++ b/CSS/main/calendario.css
@@ -1,23 +1,23 @@
-#top {
-
-    background: #eee;
-    border-bottom: 1px solid #ddd;
-    padding: 0 10px;
-    line-height: 40px;
-    font-size: 12px;
-    color: var(--cor-elementos-01);
-
-  }
-
 #calendar {
 
     font-family: var(--fonte-01);
-    font-size: 14px;
+    font-size: 10px;
     max-width: 300px;
     width: 100%;
     margin: 40px auto;
     color: var(--cor-elementos-01);
 
+}
+
+/* Oculta os botões de navegação para Dia, Mês e Semana */
+#calendar .fc-button-group:not(.fc-button-group.fc-scrollbars) .fc-button:not(.fc-prev-button):not(.fc-next-button) {
+
+    display: none;
+}
+
+/* Ajusta a posição dos botões de navegação Anterior e Próximo */
+#calendar .fc-button-group.fc-scrollbars {
+    justify-content: space-between;
 }
 
 @media (min-width: 720px) {
@@ -27,6 +27,22 @@
         max-width: 600px;
 
     }
+
+}
+
+@media (min-width: 721px) {
+
+    #calendar .fc-button-group:not(.fc-button-group.fc-scrollbars) .fc-button:not(.fc-prev-button):not(.fc-next-button) {
+                              
+        display: flex;
+
+    }
+
+    #calendar {
+
+        font-size: 15px;
+              
+    }
  
 }
 
@@ -35,9 +51,10 @@
     #calendar {
 
         max-width: 1000px;
-        
+        font-size: 20px;
+              
     }
- 
+  
 }
 
 @media (min-width: 1500px) {
@@ -59,3 +76,4 @@
     }
 
 }
+
